force-app/main/default/objects/TTS_Technology__c/TTS_Technology__c.object-meta.xml
<CustomObject>
    <description>Holds shared technical, disclosure, readiness, ownership, and commercial information about a technology or invention.</description>
    <label>Technology</label>
    <nameField>
        <displayFormat>TEC{000000}</displayFormat>
        <label>Technology ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technologies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>