force-app/main/default/objects/TTS_Technology__c/fields/Confirmatory_Licence_Granted__c.field-meta.xml
<CustomField>
    <fullName>Confirmatory_Licence_Granted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates a confirmatory licence to the US government has been granted, as required under Bayh-Dole for subject inventions.</description>
    <inlineHelpText>Select when the confirmatory licence to the government has been granted.</inlineHelpText>
    <label>Confirmatory Licence Granted</label>
    <type>Checkbox</type>
</CustomField>