force-app/main/default/objects/TTS_Technology__c/fields/First_Commercial_Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Commercial_Sale_Date__c</fullName>
    <description>Date of first commercial sale of a product embodying the technology. Required for iEdison utilisation reporting.</description>
    <inlineHelpText>Enter the date of the first commercial sale, if any.</inlineHelpText>
    <label>First Commercial Sale Date</label>
    <type>Date</type>
</CustomField>