force-app/main/default/objects/TTS_Technology__c/fields/Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The funding award that supported the research behind this technology. Ties subject inventions to their award for Bayh-Dole/iEdison reporting.</description>
    <inlineHelpText>Select the funding award that supported this technology.</inlineHelpText>
    <label>Funding Award</label>
    <referenceTo>TTS_Funding_Award__c</referenceTo>
    <relationshipLabel>Technologies</relationshipLabel>
    <relationshipName>Technologies</relationshipName>
    <type>Lookup</type>
</CustomField>