force-app/main/default/objects/TTS_Technology__c/fields/Government_Interest__c.field-meta.xml
<CustomField>
    <fullName>Government_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the US federal government retains a paid-up licence or march-in rights in the technology under Bayh-Dole.</description>
    <inlineHelpText>Select when the federal government retains rights in this technology.</inlineHelpText>
    <label>Government Interest</label>
    <type>Checkbox</type>
</CustomField>