force-app/main/default/objects/TTS_Technology__c/fields/IP_Category__c.field-meta.xml
<CustomField>
    <fullName>IP_Category__c</fullName>
    <description>Classifies the technology by its principal technical or product category.</description>
    <inlineHelpText>Select the category that best describes the technology.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Composition of Matter</fullName>
            </value>
            <value>
                <fullName>Device</fullName>
            </value>
            <value>
                <fullName>Drawing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Product Improvement</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>