force-app/main/default/objects/TTS_Technology__c/fields/IP_Commercial_Market__c.field-meta.xml
<CustomField>
    <fullName>IP_Commercial_Market__c</fullName>
    <description>Documents findings and proposals concerning the technology&apos;s commercial market potential.</description>
    <inlineHelpText>Describe target markets, potential customers, market size, demand, and commercial opportunities.</inlineHelpText>
    <label>Market Potential</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>