force-app/main/default/objects/TTS_Technology__c/fields/IP_Compact_Title__c.field-meta.xml
<CustomField>
    <fullName>IP_Compact_Title__c</fullName>
    <description>Formula combining the auto-generated technology reference and Technology Title for compact display and reporting.</description>
    <formula>Name &amp; &quot; - &quot; &amp;  IP_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Read-only value showing the technology reference followed by its title.</inlineHelpText>
    <label>Compact Title</label>
    <type>Text</type>
</CustomField>