force-app/main/default/objects/TTS_Technology__c/fields/IP_Disclosure_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_Disclosure_Date__c</fullName>
    <description>Stores the date the technology or invention was initially disclosed.</description>
    <inlineHelpText>Enter the date the technology or invention was first disclosed.</inlineHelpText>
    <label>Disclosure Date</label>
    <type>Date</type>
</CustomField>