force-app/main/default/objects/TTS_Technology__c/fields/IP_Experimental_Verification__c.field-meta.xml
<CustomField>
    <fullName>IP_Experimental_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether experimental verification of the technology has been completed.</description>
    <inlineHelpText>Select when experimental testing or verification has been completed.</inlineHelpText>
    <label>Experimental Verification Complete</label>
    <type>Checkbox</type>
</CustomField>