force-app/main/default/objects/TTS_Technology__c/fields/IP_Experimental_Verification_Detail__c.field-meta.xml
<CustomField>
    <fullName>IP_Experimental_Verification_Detail__c</fullName>
    <description>Documents the experimental verification performed for the technology and its results.</description>
    <inlineHelpText>Describe the tests performed, evidence obtained, and key verification results.</inlineHelpText>
    <label>Experimental Verification Detail</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>