force-app/main/default/objects/TTS_Technology__c/fields/IP_External_Reference__c.field-meta.xml
<CustomField>
    <fullName>IP_External_Reference__c</fullName>
    <description>Stores the unique reference used for this technology in an external system.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the unique identifier for this technology in the source or external system.</inlineHelpText>
    <label>External Reference</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>