force-app/main/default/objects/TTS_Technology__c/fields/IP_Future_Publications__c.field-meta.xml
<CustomField>
    <fullName>IP_Future_Publications__c</fullName>
    <description>Documents planned or proposed publications that may disclose the technology.</description>
    <inlineHelpText>Describe planned publications, expected dates, and any known disclosure implications.</inlineHelpText>
    <label>Future Publications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>