force-app/main/default/objects/TTS_Technology__c/fields/IP_Known_Limitations__c.field-meta.xml
<CustomField>
    <fullName>IP_Known_Limitations__c</fullName>
    <description>Documents known technical or practical limitations of the technology.</description>
    <inlineHelpText>Describe known limitations, disadvantages, and any possible mitigations.</inlineHelpText>
    <label>Known Limitations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>