force-app/main/default/objects/TTS_Technology__c/fields/IP_Known_Risks__c.field-meta.xml
<CustomField>
    <fullName>IP_Known_Risks__c</fullName>
    <description>Documents technical, adoption, or commercialisation risks affecting the technology.</description>
    <inlineHelpText>Describe risks that could impede development, adoption, protection, or commercialisation.</inlineHelpText>
    <label>Known Risks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>