force-app/main/default/objects/TTS_Technology__c/fields/IP_Known_Variations__c.field-meta.xml
<CustomField>
    <fullName>IP_Known_Variations__c</fullName>
    <description>Documents known or anticipated variations of the technology.</description>
    <inlineHelpText>Describe alternative forms, implementations, or variants of the technology.</inlineHelpText>
    <label>Known Variations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>