force-app/main/default/objects/TTS_Technology__c/fields/IP_Materials__c.field-meta.xml
<CustomField>
    <fullName>IP_Materials__c</fullName>
    <description>Documents materials used by the technology and their sources.</description>
    <inlineHelpText>Describe key materials and identify externally supplied or restricted sources.</inlineHelpText>
    <label>Materials Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>