force-app/main/default/objects/TTS_Technology__c/fields/IP_Novelty__c.field-meta.xml
<CustomField>
    <fullName>IP_Novelty__c</fullName>
    <description>Explains how the technology differs from existing technologies and practices.</description>
    <inlineHelpText>Describe what is new, its advantages, and the problem it solves compared with existing approaches.</inlineHelpText>
    <label>Novelty/Newness</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>