force-app/main/default/objects/TTS_Technology__c/fields/IP_ParentIP__c.field-meta.xml
<CustomField>
    <fullName>IP_ParentIP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the technology to a parent technology from which it was derived.</description>
    <inlineHelpText>Select the parent technology from which this record was derived.</inlineHelpText>
    <label>Parent Technology</label>
    <referenceTo>TTS_Technology__c</referenceTo>
    <relationshipLabel>Related Technologies</relationshipLabel>
    <relationshipName>Child_Technology</relationshipName>
    <type>Lookup</type>
</CustomField>