force-app/main/default/objects/TTS_Technology__c/fields/IP_Principal_Inventor_PI__c.field-meta.xml
<CustomField>
    <fullName>IP_Principal_Inventor_PI__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Identifies the Contact designated as the primary inventor on a related Inventor record.</description>
    <inlineHelpText>Automatically populated from the related Inventor marked as primary.</inlineHelpText>
    <label>Principal Inventor (PI)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Technology</relationshipLabel>
    <relationshipName>IP_PI_Relationship</relationshipName>
    <type>Lookup</type>
</CustomField>