force-app/main/default/objects/TTS_Technology__c/fields/IP_Prior_Art__c.field-meta.xml
<CustomField>
    <fullName>IP_Prior_Art__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether related prior inventions, publications, or other prior art have been identified.</description>
    <inlineHelpText>Select when relevant prior inventions, publications, or other prior art are known.</inlineHelpText>
    <label>Prior Art</label>
    <type>Checkbox</type>
</CustomField>