force-app/main/default/objects/TTS_Technology__c/fields/IP_Prior_Art_detail__c.field-meta.xml
<CustomField>
    <fullName>IP_Prior_Art_detail__c</fullName>
    <description>Documents prior inventions, publications, or other art relevant to the technology.</description>
    <inlineHelpText>Describe known prior art and explain its relevance to the technology.</inlineHelpText>
    <label>Prior Art Details</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>