force-app/main/default/objects/TTS_Technology__c/fields/IP_Public_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>IP_Public_Disclosure__c</fullName>
    <description>Stores the official date the technology was first disclosed publicly.</description>
    <inlineHelpText>Enter the earliest date the technology was made available to the public.</inlineHelpText>
    <label>Public Disclosure Date</label>
    <type>Date</type>
</CustomField>