force-app/main/default/objects/TTS_Technology__c/fields/IP_Public_Disclosure_Details__c.field-meta.xml
<CustomField>
    <fullName>IP_Public_Disclosure_Details__c</fullName>
    <description>Documents the circumstances, audience, and plans associated with public disclosure of the technology.</description>
    <inlineHelpText>Describe completed or planned public disclosures, including venue, audience, and timing.</inlineHelpText>
    <label>Public Disclosure Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>