force-app/main/default/objects/TTS_Technology__c/fields/IP_Sponsored_Program__c.field-meta.xml
<CustomField>
    <fullName>IP_Sponsored_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the technology arose from or is associated with sponsored research.</description>
    <inlineHelpText>Select when the technology was conceived or developed under a sponsored program.</inlineHelpText>
    <label>Sponsored Program</label>
    <type>Checkbox</type>
</CustomField>