force-app/main/default/objects/TTS_Technology__c/fields/IP_Sponsored_Program_Detail__c.field-meta.xml
<CustomField>
    <fullName>IP_Sponsored_Program_Detail__c</fullName>
    <description>Documents sponsorship or sponsored research associated with the technology.</description>
    <inlineHelpText>Describe the sponsor, program, award or agreement, and relevant obligations.</inlineHelpText>
    <label>Sponsored Program Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>