force-app/main/default/objects/TTS_Technology__c/fields/IP_Technical_Description__c.field-meta.xml
<CustomField>
    <fullName>IP_Technical_Description__c</fullName>
    <description>Provides the full technical description of the technology or invention.</description>
    <inlineHelpText>Describe how the technology works, its components, methods, and distinguishing technical features.</inlineHelpText>
    <label>Technical Description</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>