force-app/main/default/objects/TTS_Technology__c/fields/IP_Title__c.field-meta.xml
<CustomField>
    <fullName>IP_Title__c</fullName>
    <description>Stores the concise business title used to identify the technology.</description>
    <inlineHelpText>Enter a short, descriptive title for the technology.</inlineHelpText>
    <label>Technology Title</label>
    <type>TextArea</type>
</CustomField>