force-app/main/default/objects/TTS_Technology__c/fields/IP_Total_Percentage_Share__c.field-meta.xml
<CustomField>
    <fullName>IP_Total_Percentage_Share__c</fullName>
    <description>Roll-up sum of positive Percentage Share values on related Inventor records, used to enforce a maximum total of 100 percent.</description>
    <inlineHelpText>Read-only total of positive inventor percentage shares; the total cannot exceed 100 percent.</inlineHelpText>
    <label>Total Percentage Share</label>
    <summarizedField>TTS_Inventor__c.Percentage_Share__c</summarizedField>
    <summaryFilterItems>
        <field>TTS_Inventor__c.Percentage_Share__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>TTS_Inventor__c.IP_Contribution__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>