force-app/main/default/objects/TTS_Technology__c/fields/IP_Total_Primary_Contributions__c.field-meta.xml
<CustomField>
    <fullName>IP_Total_Primary_Contributions__c</fullName>
    <description>Roll-up count of related Inventor records marked as primary, used to prevent more than one primary inventor.</description>
    <inlineHelpText>Read-only count of related inventors marked as primary; valid values are zero or one.</inlineHelpText>
    <label>Total Primary Contributions</label>
    <summaryFilterItems>
        <field>TTS_Inventor__c.IP_Is_Primary__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>TTS_Inventor__c.IP_Contribution__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>