force-app/main/default/objects/TTS_Technology__c/fields/IP_Utility__c.field-meta.xml
<CustomField>
    <fullName>IP_Utility__c</fullName>
    <description>Documents current and potential practical uses or applications of the technology.</description>
    <inlineHelpText>Describe direct, secondary, and potential future uses of the technology.</inlineHelpText>
    <label>Utility Details</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>