force-app/main/default/objects/TTS_Technology__c/fields/Non_Confidential_Description__c.field-meta.xml
<CustomField>
    <fullName>Non_Confidential_Description__c</fullName>
    <description>Stores an externally shareable, non-confidential description of the technology.</description>
    <inlineHelpText>Enter approved non-confidential text suitable for websites, media, or external publications.</inlineHelpText>
    <label>Non-Confidential Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>