force-app/main/default/objects/TTS_Technology__c/fields/Product_Names__c.field-meta.xml
<CustomField>
    <fullName>Product_Names__c</fullName>
    <description>Names of products or services on the market that embody the technology, for iEdison utilisation reporting.</description>
    <inlineHelpText>List the products or services on the market based on this technology.</inlineHelpText>
    <label>Product Names</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>