force-app/main/default/objects/TTS_Technology__c/fields/Products_On_Market__c.field-meta.xml
<CustomField>
    <fullName>Products_On_Market__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates one or more products or services embodying the technology are on the market. Feeds iEdison utilisation reporting.</description>
    <inlineHelpText>Select when a product or service based on this technology is on the market.</inlineHelpText>
    <label>Products On Market</label>
    <type>Checkbox</type>
</CustomField>