force-app/main/default/objects/TTS_Technology__c/fields/Title_Election_Date__c.field-meta.xml
<CustomField>
    <fullName>Title_Election_Date__c</fullName>
    <description>Date the institution elected to retain title to the subject invention, tracked against the Bayh-Dole election deadline.</description>
    <inlineHelpText>Enter the date title to the invention was elected.</inlineHelpText>
    <label>Title Election Date</label>
    <type>Date</type>
</CustomField>