force-app/main/default/objects/TTS_Technology__c/fields/Trademark_Classes__c.field-meta.xml
<CustomField>
    <fullName>Trademark_Classes__c</fullName>
    <description>Identifies Nice Classification classes of goods and services associated with trademarks for the technology.</description>
    <inlineHelpText>Select all Nice classes that apply to trademark goods or services associated with this technology.</inlineHelpText>
    <label>Trademark Classes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WIPO_NCL_Classes</valueSetName>
    </valueSet>
</CustomField>