force-app/main/default/objects/TTS_Technology__c/fields/TRL__c.field-meta.xml
<CustomField>
    <fullName>TRL__c</fullName>
    <description>Records the technology&apos;s readiness level on the nine-level TRL scale.</description>
    <inlineHelpText>Select TRL 1 for earliest research through TRL 9 for a proven operational technology.</inlineHelpText>
    <label>Technology Readiness Level (TRL)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRL 1</fullName>
                <default>true</default>
                <label>TRL 1</label>
            </value>
            <value>
                <fullName>TRL 2</fullName>
            </value>
            <value>
                <fullName>TRL 3</fullName>
            </value>
            <value>
                <fullName>TRL 4</fullName>
            </value>
            <value>
                <fullName>TRL 5</fullName>
            </value>
            <value>
                <fullName>TRL 6</fullName>
            </value>
            <value>
                <fullName>TRL 7</fullName>
            </value>
            <value>
                <fullName>TRL 8</fullName>
            </value>
            <value>
                <fullName>TRL 9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>