force-app/main/default/objects/TTS_Technology__c/fields/US_Manufactured__c.field-meta.xml
<CustomField>
    <fullName>US_Manufactured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates products embodying the technology are substantially manufactured in the US, per the Bayh-Dole US-manufacturing preference.</description>
    <inlineHelpText>Select when products are substantially manufactured in the United States.</inlineHelpText>
    <label>US Manufactured</label>
    <type>Checkbox</type>
</CustomField>