force-app/main/default/objects/TTS_Technology__c/fields/Utilisation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Utilisation_Stage__c</fullName>
    <description>Commercialisation/utilisation status of the technology, required for the iEdison utilisation report.</description>
    <inlineHelpText>Select the current commercialisation stage of the technology.</inlineHelpText>
    <label>Utilisation Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Utilised</fullName>
                <default>true</default>
                <label>Not Yet Utilised</label>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>Product on Market</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>