force-app/main/default/objects/TTS_Technology__c/recordTypes/Technology.recordType-meta.xml
<RecordType>
    <fullName>Technology</fullName>
    <active>true</active>
    <description>Invention Disclosures, Technology records and IP</description>
    <label>Technology</label>
</RecordType>